--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!doctype>
 <html lang="pt-BR">
-	
+	<header>
+		<meta charset="utf-8">
+		<title>Rank Up Strategy</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+	</header>
 </html>
