--- a/index.html
+++ b/index.html
@@ -5,4 +5,19 @@
 		<title>Rank Up Strategy</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</header>
+
+	<body>
+		<div class="Menu">
+			
+		</div>
+
+		<div class="Sidebar">
+		</div>
+
+		<div class="Content">
+			<div class="Artigo">
+				alkdjma
+			</div>
+		</div>
+	</body>
 </html>
