--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 	
 	<body>
 		<div class="Menu">
-			
+			<ul>
+				<li><a href="#">Início</a></li>
+				<li><a href="#">Notícias</a></li>
+				<li><a href="#">Estratégias</a></li>
+				<li><a href="#">Eventos</a></li>
+				<li><a href="#">Banlist</a></li>
+				<li><a href="#">Sobre</a></li>
+			</ul>
 		</div>
 
 		<div class="Sidebar">
