lista de decks mais usados

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="Menu">
 			<ul>
-				<li><a href="#">Início</a></li>
+				<li><a href="index.html">Início</a></li>
 				<li><a href="#">Notícias</a></li>
 				<li><a href="#">Estratégias</a></li>
 				<li><a href="#">Eventos</a></li>
@@ -18,13 +18,33 @@
 			</ul>
 		</div>
 
-		<div class="Sidebar">
-		</div>
+		
+			<div class="Sidebar">
+				<h1>Mais usados no Meta</h1>
+				<ol class="ListaMeta">
+					<li>Monarch</li>
+					<li>Burning Abyss</li>
+					<li>Performapal</li>
+					<li>Kozmo</li>
+					<li>Phantom Knights</li>
+					<li>Majespecter</li>
+					<li>Mermail</li>
+					<li>Qli</li>
+					<li>Infernoid</li>
+					<li>Super Quantums</li>
 
-		<div class="Content">
-			<div class="Artigo">
-				alkdjma
+					<h2 class="FonteMeta">
+						Fonte: <a href="http://yugiohtopdecks.com/?filter=Last+3+Months">YuGiOh Top Decks</a>
+					</h2>
+
+				</ol>
 			</div>
-		</div>
+
+			<div class="Content">
+				<div class="Artigo">
+					alkdjma
+				</div>
+			</div>
+		
 	</body>
 </html>
