--- a/index.html
+++ b/index.html
@@ -41,8 +41,27 @@
 			</div>
 
 			<div class="Content">
-				<div class="Artigo">
-					alkdjma
+				<div class="Artigo">	
+			
+				<! Cínthia aqui - testando Div de conteudo!>	
+				    <div class="AreaConteudo">
+                                        <div class="conteudo">
+	                                   <articles class="PrimeiroPost">
+                                             <header>
+		                                  <h2><a href="#" title="Primiero Post"> CUBIC/HOUKAI: Apresentação do Arquétipo & Decklist</a></h2>
+	                                        </header>
+	                                      <footer>
+	                                 <p class="info"> Esse é o primeiro conteudo do Rankig Up </p>
+	                                  </footer>
+	                                <content>
+	 	<p>  Cubic é o arquétipo utilizado por Aigami (principal antagonista) no novo filme, e que teve seu lançamento no card game através do The Dark Side                  of Dimensions – Movie Pack e V-Jump, no caso do Duja.</p>
+		<p> No o OCG o arquétipo é denominado Houkai (方界), cujos caracteres são a junção do segundo e quarto caractere do mundo das dez direções (十方世界).</p>
+	  </content>
+       </article>
+    </div>
+<div>
+
+		<! Cínthia aqui - testando Div de conteudo!>
 				</div>
 			</div>
 		
