--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype>
 <html lang="pt-BR">
 	<header>
+		<link rel="shortcut icon" href="img/iconru.ico" type="image/x-icon" />
+
 		<meta charset="utf-8">
 		<title>Rank Up Strategy</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -10,11 +12,11 @@
 		<div class="Menu">
 			<ul>
 				<li><a href="index.html">Início</a></li>
-				<li><a href="#">Notícias</a></li>
-				<li><a href="#">Estratégias</a></li>
-				<li><a href="#">Eventos</a></li>
-				<li><a href="#">Banlist</a></li>
-				<li><a href="#">Sobre</a></li>
+				<li><a href="noticias.html">Notícias</a></li>
+				<li><a href="estrategias.html">Estratégias</a></li>
+				<li><a href="eventos.html">Eventos</a></li>
+				<li><a href="banlist.html">Banlist</a></li>
+				<li><a href="sobre.html">Sobre</a></li>
 			</ul>
 		</div>
 
@@ -43,27 +45,63 @@
 			<div class="Content">
 				<div class="Artigo">	
 			
-				<! Cínthia aqui - testando Div de conteudo!>	
+				<! POST 1! >	
 				    <div class="AreaConteudo">
-                                        <div class="conteudo">
+					
+                                        <div class="conteudo">	
+						<div class="img">
+						<img src="img/img.png" height="200"width="200">
+                                                    </div>
 	                                   <articles class="PrimeiroPost">
                                              <header>
-		                                  <h2><a href="#" title="Primiero Post"> CUBIC/HOUKAI: Apresentação do Arquétipo & Decklist</a></h2>
+		                                  <h2><title="Primiero Post"> CUBIC/HOUKAI: Apresentação do Arquétipo & Decklist</h2>
 	                                        </header>
 	                                      <footer>
-	                                 <p class="info"> Esse é o primeiro conteudo do Rankig Up </p>
+	                                 <p class="info"> Esse é o primeiro conteudo do Rank Up </p>
 	                                  </footer>
 	                                <content>
 	 	<p>  Cubic é o arquétipo utilizado por Aigami (principal antagonista) no novo filme, e que teve seu lançamento no card game através do The Dark Side                  of Dimensions – Movie Pack e V-Jump, no caso do Duja.</p>
 		<p> No o OCG o arquétipo é denominado Houkai (方界), cujos caracteres são a junção do segundo e quarto caractere do mundo das dez direções (十方世界).</p>
+		<div class="LerMais">
+              	<p><a href="post1.html	"> Leia mais </a></p>
+		</div>
 	  </content>
        </article>
     </div>
 <div>
 
-		<! Cínthia aqui - testando Div de conteudo!>
+						<! POST 1! >	
+
+			<! POST 2! >	
+				    <div class="AreaConteudo">
+					
+                                        <div class="conteudo">	
+						<div class="img">
+						<img src="img/img.png" height="200"width="200">
+                                                    </div>
+	                                   <articles class="PrimeiroPost">
+                                             <header>
+		                                  <h2><title="Primiero Post"> CUBIC/HOUKAI: Apresentação do Arquétipo & Decklist</h2>
+	                                        </header>
+	                                      <footer>
+	                                 <p class="info"> Esse é o primeiro conteudo do Rank Up </p>
+	                                  </footer>
+	                                <content>
+	 	<p>  Cubic é o arquétipo utilizado por Aigami (principal antagonista) no novo filme, e que teve seu lançamento no card game através do The Dark Side                  of Dimensions – Movie Pack e V-Jump, no caso do Duja.</p>
+		<p> No o OCG o arquétipo é denominado Houkai (方界), cujos caracteres são a junção do segundo e quarto caractere do mundo das dez direções (十方世界).</p>
+		<div class="LerMais">
+              	<p><a href="#"> Leia mais </a></p>
+		</div>
+	  </content>
+       </article>
+    </div>
+<div>
+
+						<! POST 2! >	
 				</div>
 			</div>
-		
+		<div = "rodape">
+
+		</div>
 	</body>
 </html>
