--- a/estrategias.html
+++ b/estrategias.html
@@ -11,17 +11,17 @@
 			<ul>
 				<li><a href="index.html">Início</a></li>
 				<li><a href="noticias.html">Notícias</a></li>
-				<li><a href="estrategia.html">Estratégias</a></li>
+				<li><a href="estrategias.html">Estratégias</a></li>
 				<li><a href="eventos.html">Eventos</a></li>
 				<li><a href="banlist.html">Banlist</a></li>
 				<li><a href="sobre.html">Sobre</a></li>
 			</ul>
 		</div>
-
-		
-			<div class="Sidebar">
+			
+		<div class="Sidebar">
+			<div class="ListaMeta">
 				<h1>Mais usados no Meta</h1>
-				<ol class="ListaMeta">
+				<ol>
 					<li>Monarch</li>
 					<li>Burning Abyss</li>
 					<li>Performapal</li>
@@ -32,21 +32,14 @@
 					<li>Qli</li>
 					<li>Infernoid</li>
 					<li>Super Quantums</li>
-
-					<h2 class="FonteMeta">
-						Fonte: <a href="http://yugiohtopdecks.com/?filter=Last+3+Months">YuGiOh Top Decks</a>
-					</h2>
-
 				</ol>
+					<h3>Fonte: <a href="http://yugiohtopdecks.com/?filter=Last+3+Months">YuGiOh Top Decks</a></h3>
 			</div>
+		</div>
 
 			<div class="Content">
 				<div class="Artigo">	
-			
-				<! Cínthia aqui - testando Div de conteudo!>	
-				   
-
-		<! Cínthia aqui - testando Div de conteudo!>
+					
 				</div>
 			</div>
 		
