--- a/post1.html
+++ b/post1.html
@@ -11,17 +11,17 @@
 			<ul>
 				<li><a href="index.html">Início</a></li>
 				<li><a href="noticias.html">Notícias</a></li>
-				<li><a href="estrategia.html">Estratégias</a></li>
+				<li><a href="estrategias.html">Estratégias</a></li>
 				<li><a href="eventos.html">Eventos</a></li>
 				<li><a href="banlist.html">Banlist</a></li>
 				<li><a href="sobre.html">Sobre</a></li>
 			</ul>
 		</div>
-
-		
-			<div class="Sidebar">
+			
+		<div class="Sidebar">
+			<div class="ListaMeta">
 				<h1>Mais usados no Meta</h1>
-				<ol class="ListaMeta">
+				<ol>
 					<li>Monarch</li>
 					<li>Burning Abyss</li>
 					<li>Performapal</li>
@@ -32,55 +32,47 @@
 					<li>Qli</li>
 					<li>Infernoid</li>
 					<li>Super Quantums</li>
-
-					<h2 class="FonteMeta">
-						Fonte: <a href="http://yugiohtopdecks.com/?filter=Last+3+Months">YuGiOh Top Decks</a>
-					</h2>
-
 				</ol>
+					<h3>Fonte: <a href="http://yugiohtopdecks.com/?filter=Last+3+Months">YuGiOh Top Decks</a></h3>
 			</div>
+		</div>
 
-			<div class="Content">
-				<div class="Artigo">	
-				     <div class="imgprincipal">
+		<div class="Content">
+			<div class="Artigo">	
+				<div class="imgprincipal">
 					<img scr="img/img.png" width="740" height="200">
-				        <div class="conteudo">
-                                            <h1> Yu-Gi-Oh! 20 Anos - Os Jogadores </h1>
-                                            <p>    
-A saudosa TV Globinho<br>
+					<div class="conteudo">
+						<h1> Yu-Gi-Oh! 20 Anos - Os Jogadores </h1>
+						<p>
+							A saudosa TV Globinho<br>
 
-	Yu-Gi-Oh! estreou no canal por assinatura Nickelodeon em torno de 2002, mas era uma época em que TV a cabo ainda era um pequeno luxo, então foi na TV Globinho, em 2003, que o sucesso despontou de verdade. Quem é dessa época lembra a quantidade surreal de cartas piratas a venda em camelôs e bancas de jornal. Elas eram de todos os tamanhos e parecia que sua qualidade ia caindo conforme o tempo passava.<br>
-	
-	Cards originais já existiam no país na época, mas estavam fora do alcance de muita gente, pelo menos no lançamento quando um deck custava R$80,00. O que com a economia e salário mínimo da época devia equivaler a R$120,00 de hoje em dia. E nem me façam lembrar do booster de The Legend of Blue-Eyes White Dragon que custava R$32,90 (talvez equivalente a mais de 50 prata hoje em dia).<br>
+							Yu-Gi-Oh! estreou no canal por assinatura Nickelodeon em torno de 2002, mas era uma época em que TV a cabo ainda era um pequeno luxo, então foi na TV Globinho, em 2003, que o sucesso despontou de verdade. Quem é dessa época lembra a quantidade surreal de cartas piratas a venda em camelôs e bancas de jornal. Elas eram de todos os tamanhos e parecia que sua qualidade ia caindo conforme o tempo passava.<br>
 
-	Entrevistando alguns jogadores pude ver como essa época impactou tanto os que começaram a duelar em 2003 como os que só entraram pro mundo dos cards recentemente.<br>
+							Cards originais já existiam no país na época, mas estavam fora do alcance de muita gente, pelo menos no lançamento quando um deck custava R$80,00. O que com a economia e salário mínimo da época devia equivaler a R$120,00 de hoje em dia. E nem me façam lembrar do booster de The Legend of Blue-Eyes White Dragon que custava R$32,90 (talvez equivalente a mais de 50 prata hoje em dia).<br>
 
-        "Eu creio que como todo pirralho lá do começo do século, eu gostei do jogo por ter assistido o anime quando passava na Globo."<br>
+							Entrevistando alguns jogadores pude ver como essa época impactou tanto os que começaram a duelar em 2003 como os que só entraram pro mundo dos cards recentemente.<br>
+							"Eu creio que como todo pirralho lá do começo do século, eu gostei do jogo por ter assistido o anime quando passava na Globo."<br>
 
- 	Ricarte Silva<br> 
+							Ricarte Silva<br> 
 
-       "Então, conheci Yu-Gi-Oh! na época que passava na TV Globinho. Acho que eu tinha uns 7 anos. Fiquei admirado com aqueles monstros e como Yugi conseguia se safar de todas as situações (visão inocente que eu tinha). Mais tarde conheci o Card game, mas infelizmente, nenhum amigo gostava tanto quanto eu. Então até recentemente, foi um gosto bastante pessoal."<br>
+							"Então, conheci Yu-Gi-Oh! na época que passava na TV Globinho. Acho que eu tinha uns 7 anos. Fiquei admirado com aqueles monstros e como Yugi conseguia se safar de todas as situações (visão inocente que eu tinha). Mais tarde conheci o Card game, mas infelizmente, nenhum amigo gostava tanto quanto eu. Então até recentemente, foi um gosto bastante pessoal."<br>
 
-Axel André Turkiewicz <br>
+							Axel André Turkiewicz <br>
 
-    "Olha conheci o anime em 2002, quando estreou na Nickelodeon. Gostava muito do anime por várias coisas: a história, os personagens e é claro, o card game, que tinha jogadas que eu achava marcantes e monstros épicos, estes fatores me deram vontade de querer jogar o TCG"<br>
+							Olha conheci o anime em 2002, quando estreou na Nickelodeon. Gostava muito do anime por várias coisas: a história, os personagens e é claro, o card game, que tinha jogadas que eu achava marcantes e monstros épicos, estes fatores me deram vontade de querer jogar o TCG"<br>
 
-Lucas Fernandes Afonso<br>
+							Lucas Fernandes Afonso<br>
 
-    Eu acabo tendo um diferencial quanto aos outros quanto a conhecer o jogo em si. Quando estourou na nossa saudosa TV Globinho e virou febre não me interessou, o estrelismo no garoto de cabelos roxos e principalmente a precariedade de regras e estratégias me afastaram do card game. Depois de MUITOS anos(perdi Gx e 5D's no auge) conheci ZeXal, por sorte havia uma loja com muitos jogadores mesmo sendo uma cidade do interior de SP. Resumidamente eu fui conhecer o que realmente era Yu-Gi-Oh! Já na reta final de 2012.<br>
+							Eu acabo tendo um diferencial quanto aos outros quanto a conhecer o jogo em si. Quando estourou na nossa saudosa TV Globinho e virou febre não me interessou, o estrelismo no garoto de cabelos roxos e principalmente a precariedade de regras e estratégias me afastaram do card game. Depois de MUITOS anos(perdi Gx e 5D's no auge) conheci ZeXal, por sorte havia uma loja com muitos jogadores mesmo sendo uma cidade do interior de SP. Resumidamente eu fui conhecer o que realmente era Yu-Gi-Oh! Já na reta final de 2012.<br>
 
-Giovanne Herrera<br>
+							Giovanne Herrera<br>
 
-Além de Yu-Gi-Oh! a TV Globinho nos trouxe tempos depois o GX, além de muitos outros animes memoráveis de nossas infâncias, como Dragon Ball Z e Digimon, mas isso foi antes da justiça decidir proibir publicidade voltada ao público infanto-juvenil na TV aberta. Então a Globo resolveu que "criança não dá dinheiro" e removeu toda a programação infantil da grade, deixando a geração atual quase orfã. Felizmente para nossos sobrinhos e afins, o SBT ainda exibe desenhos apesar do pouco lucro.<br>
-<br>fonte: <a href="http://www.yugiohnexus.com"> Yu-Gi-Oh Nexus </a>
-</p>    
-
+							Além de Yu-Gi-Oh! a TV Globinho nos trouxe tempos depois o GX, além de muitos outros animes memoráveis de nossas infâncias, como Dragon Ball Z e Digimon, mas isso foi antes da justiça decidir proibir publicidade voltada ao público infanto-juvenil na TV aberta. Então a Globo resolveu que "criança não dá dinheiro" e removeu toda a programação infantil da grade, deixando a geração atual quase orfã. Felizmente para nossos sobrinhos e afins, o SBT ainda exibe desenhos apesar do pouco lucro.<br>
+							<br>fonte: <a href="http://www.yugiohnexus.com"> Yu-Gi-Oh Nexus </a>
+						</p>
 				 	</div>
 				</div>
 			</div>
- 			
 		</div>
-
 	</body>
-
 </html>
