--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						</content>
 					</articles>
 				</div>
-				<a class="ReadMore" href="#"><button type="button">Ler Mais</button></a>
+				<a class="ReadMore" href="post1.html"><button type="button">Ler Mais</button></a>
 			</div>
 
 			<! Post 2: The Dark Illusion >
@@ -83,7 +83,7 @@
 						</content>
 					</articles>
 				</div>
-				<a class="ReadMore" href="#"><button type="button">Ler Mais</button></a>
+				<a class="ReadMore" href="post1.html"><button type="button">Ler Mais</button></a>
 			</div>
 		</div>
 		<div = "rodape">
