--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
 				<a class="ReadMore" href="post1.html"><button type="button">Ler Mais</button></a>
 			</div>
 		</div>
-		<div = "rodape">
-				
+		
+		<div class="Footer">
+			
 		</div>
 	</body>
 </html>
