Atualização da pagina de conteudo e o css

--- a/post1.html
+++ b/post1.html
@@ -3,7 +3,7 @@
 	<header>
 		<meta charset="utf-8">
 		<title>Rank Up Strategy</title>
-		<link rel="stylesheet" type="text/css" href="css/post-style.css">
+		<link rel="stylesheet" type="text/css" href="css/style-post.css">
 	</header>
 	
 	<body>
@@ -39,14 +39,14 @@
 
 		<div class="Content">
 			<div class="Artigo">	
-				<div class="imgprincipal">
+				<div class="mainimg">
 					<img scr="img/img.png" width="740" height="200">
-					<div class="conteudo">
+					<div class="matter">
 						<h1> Yu-Gi-Oh! 20 Anos - Os Jogadores </h1>
 						<p>
 							A saudosa TV Globinho<br>
 
-							Yu-Gi-Oh! estreou no canal por assinatura Nickelodeon em torno de 2002, mas era uma época em que TV a cabo ainda era um pequeno luxo, então foi na TV Globinho, em 2003, que o sucesso despontou de verdade. Quem é dessa época lembra a quantidade surreal de cartas piratas a venda em camelôs e bancas de jornal. Elas eram de todos os tamanhos e parecia que sua qualidade ia caindo conforme o tempo passava.<br>
+								Yu-Gi-Oh! estreou no canal por assinatura Nickelodeon em torno de 2002, mas era uma época em que TV a cabo ainda era um pequeno luxo, então foi na TV Globinho, em 2003, que o sucesso despontou de verdade. Quem é dessa época lembra a quantidade surreal de cartas piratas a venda em camelôs e bancas de jornal. Elas eram de todos os tamanhos e parecia que sua qualidade ia caindo conforme o tempo passava.<br>
 
 							Cards originais já existiam no país na época, mas estavam fora do alcance de muita gente, pelo menos no lançamento quando um deck custava R$80,00. O que com a economia e salário mínimo da época devia equivaler a R$120,00 de hoje em dia. E nem me façam lembrar do booster de The Legend of Blue-Eyes White Dragon que custava R$32,90 (talvez equivalente a mais de 50 prata hoje em dia).<br>
 
