página de estratégias

--- a/estrategias.html
+++ b/estrategias.html
@@ -37,11 +37,38 @@
 			</div>
 		</div>
 
-			<div class="Content">
-				<div class="Artigo">	
-					
+		<div class="Content">
+			<div class="deckSelect">
+				<div class="deck">
+					<a href="strategies/monarch.html"><img src="img/img.png">
+					Monarch</a>
+				</div>
+
+				<div class="deck">
+					<a href="#"><img src="img/img.png">
+					Magician Pendulum</a>
+				</div>
+
+				<div class="deck">
+					<a href="strategies/dark_magician.html"><img src="img/img.png">
+					Dark Magician</a>
+				</div>
+
+				<div class="deck">
+					<a href="#"><img src="img/img.png">
+					Blue Eyes</a>
+				</div>
+
+				<div class="deck">
+					<a href="#"><img src="img/img.png">
+					Phatom Knights</a>
+				</div>
+
+				<div class="deck">
+					<a href="#"><img src="img/img.png">
+					Kozmo</a>
 				</div>
 			</div>
-		
+		</div>
 	</body>
 </html>
