--- a/eventos.html
+++ b/eventos.html
@@ -4,24 +4,22 @@
 		<link rel="shortcut icon" href="img/iconru.ico" type="image/x-icon" />
 		<meta charset="utf-8">
 		<title>Rank Up Strategy</title>
-		<link rel="stylesheet" type="text/css" href="css/event-style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</header>
 	
 	<body>
 		<div class="Menu">
 			<ul>
 				<li><a href="index.html">Início</a></li>
-				<li><a href="noticias.html">Notícias</a></li>
 				<li><a href="estrategias.html">Estratégias</a></li>
 				<li><a href="eventos.html">Eventos</a></li>
 				<li><a href="banlist.html">Banlist</a></li>
-				<li><a href="sobre.html">Sobre</a></li>
 			</ul>
 		</div>
 			
 		<div class="Sidebar">
 			<div class="ListaMeta">
-				<h1>Mais usados no Meta</h1>
+				<h1>Decks Mais Usados</h1>
 				<ol>
 					<li>Monarch</li>
 					<li>Burning Abyss</li>
@@ -62,7 +60,7 @@
 						
 						<div class="information">
 							<h1> Mais Informações </h1>
-							<p><a href="http://www.yugioh-card.com/en/events/2016/Extravaganza_AnimeFriends_Brazil_FAQ.html"> Mais detalhes</a></p>
+							<p><a href="http://www.yugioh-card.com/lat-am/pt/events/2016/Extravaganza_AnimeFriends_Brazil_FAQ.html"> Mais detalhes</a></p>
 						</div>
 					</div>
 
