--- a/strategies/dark_magician.html
+++ b/strategies/dark_magician.html
@@ -12,17 +12,15 @@
 		<div class="Menu">
 			<ul>
 				<li><a href="../index.html">Início</a></li>
-				<li><a href="../noticias.html">Notícias</a></li>
 				<li><a href="../estrategias.html">Estratégias</a></li>
 				<li><a href="../eventos.html">Eventos</a></li>
 				<li><a href="../banlist.html">Banlist</a></li>
-				<li><a href="../sobre.html">Sobre</a></li>
 			</ul>
 		</div>
 			
 		<div class="Sidebar">
 			<div class="ListaMeta">
-				<h1>Mais usados no Meta</h1>
+				<h1>Decks Mais Usados</h1>
 				<ol>
 					<li>Monarch</li>
 					<li>Burning Abyss</li>
