--- a/estrategias.html
+++ b/estrategias.html
@@ -10,17 +10,15 @@
 		<div class="Menu">
 			<ul>
 				<li><a href="index.html">Início</a></li>
-				<li><a href="noticias.html">Notícias</a></li>
 				<li><a href="estrategias.html">Estratégias</a></li>
 				<li><a href="eventos.html">Eventos</a></li>
 				<li><a href="banlist.html">Banlist</a></li>
-				<li><a href="sobre.html">Sobre</a></li>
 			</ul>
 		</div>
 			
 		<div class="Sidebar">
 			<div class="ListaMeta">
-				<h1>Mais usados no Meta</h1>
+				<h1>Decks Mais Usados</h1>
 				<ol>
 					<li>Monarch</li>
 					<li>Burning Abyss</li>
@@ -39,34 +37,15 @@
 
 		<div class="Content">
 			<div class="deckSelect">
+				<h1>Arquétipos</h1>
 				<div class="deck">
 					<a href="strategies/monarch.html"><img src="img/img.png">
 					Monarch</a>
 				</div>
 
 				<div class="deck">
-					<a href="#"><img src="img/img.png">
-					Magician Pendulum</a>
-				</div>
-
-				<div class="deck">
 					<a href="strategies/dark_magician.html"><img src="img/img.png">
 					Dark Magician</a>
-				</div>
-
-				<div class="deck">
-					<a href="#"><img src="img/img.png">
-					Blue Eyes</a>
-				</div>
-
-				<div class="deck">
-					<a href="#"><img src="img/img.png">
-					Phatom Knights</a>
-				</div>
-
-				<div class="deck">
-					<a href="#"><img src="img/img.png">
-					Kozmo</a>
 				</div>
 			</div>
 		</div>
