Traduzi o texto do dark magicia e coloquei algumas imagens

--- a/strategies/dark_magician.html
+++ b/strategies/dark_magician.html
@@ -46,23 +46,25 @@
 					<p>"Dark Magician of Chaos" e "Skilled Dark Magician" não são cartas "Dark Magician" porque eles não têm 「ブラック・マジシャン」 nos seus nomes japoneses.</p><br>
 
 					<h1>Estilo de Jogo</h1>
-					<p>A good opening combo is to use "Magician's Rod" to search for "Dark Magical Circle", then use the 2nd effect of "Dark Magical Circle" to banish a card during either player's turn.</p>
+					<p>Uma boa combinação de abertura é usar "Magician's Rod" para trazer "Dark Magical Circle" para sua mão, então usar o 2º efeito de "Dark Magical Circle" para banir uma carta durante o turno de qualquer jogador.</p>
 
-					<p>"Dark Magician of Chaos" can banish monsters it destroys by battle, and "Ebon Illusion Magician" can Special Summon any Spellcaster-Type Normal Monster and banish a card on the field when a Spellcaster-Type Normal Monster attacks. If "Dark Magician" is Tributed by "Dedication through Light and Darkness" to Summon "Dark Magician of Chaos" or detached from "Ebon Illusion Magician" after being used as an Xyz Material, "Eternal Soul" can be used to easily Special Summon it from the Graveyard.</p>
+					<p>"Dark Magician of Chaos" pode banir os monstros que destrói por batalha, e "Ebon Illusion Magician" pode Especial-Invocar qualquer Monstro Normal tipo Mago e banir uma carta quando um Monstro Normal tipo Mago ataca. Se "Dark Magician" for usado como Tributo para "Dedication through Light and Darkness" para invocar "Dark Magician of Chaos", ou for desanexado de "Ebon Illusion Magician" depois de ter sido usado como Material Xyz, "Eternal Soul" pode ser usada para Especial-Invocá-lo facilmente do Cemitério.</p>
 
-					<p>"Magician Navigation" can Special Summon both "Magician of Dark Illusion" and "Dark Magician" during your opponent's turn while "Magician's Rod" is in your Graveyard and "Dark Magical Circle" is face-up on your side of the field. "Dark Magical Circle" and "Magician's Rod" will both activate and go on a Chain (you chose the order of the Chain Links); make the effect of "Magician's Rod" Chain Link 1 and Tribute the "Dark Magician" you just Summoned as the cost, then activate the effect of "Dark Magical Circle" as Chain Link 2 to banish 1 card your opponent controls. After resolving, you can activate the Trigger Effect of "Magician of Dark Illusion", allowing you to Special Summon "Dark Magician" from the Graveyard.</p>
+					<p>"Magician Navigation" pode Especial-Invocar tanto "Magician of Dark Illusion" quanto "Dark Magician" durante o turno do seu oponente quando "Magician's Rod" está no seu Cemitério e "Dark Magical Circle" está com a face para cima do seu lado do campo. "Dark Magical Circle" e "Magician's Rod" vão ativar seus efeitos ao mesmo tempo e isso irá gerar uma Corrente (você escolhe a ordem dos links da corrente); escolha o efeito de "Magician's Rod" como Link de Corrente 1 e Tribute o "Dark Magician" que você acabou de Invocar como custo, então ative o efeito de "Dark Magical Circle" como Link de Corrente 2 para banir 1 card que seu oponente controla. Após os efeitos resolverem, você pode ativar o efeito de Gatilho de "Magician of Dark Illusion", permitindo que você Especial-Invoque o "Dark Magician" do Cemitério.</p>
 
-					<p>The "Dark Magician" archetype also meshes nicely with the Spellcaster control Decks against Spell/Pendulum-heavy or Trap-heavy Decks, allowing for fast field control while shutting down an opponent's ability to use Spells and Traps, namely "Dark Paladin" and "Sorcerer of Dark Magic". "Sorceror" can remove the risky effect of "Eternal Soul", which is triggered when it is destroyed.</p>
+					<p>O arquétipo "Dark Magician" também funciona muito bem em conjunto com Decks de Magos de Controle contra Decks baseados em Magias/Pêndulos ou Armadilhas, permitindo controle rápido do campo enquando trava a habilidade do seu oponente de usar Magias e Armadilhas, para tal, você pode usar, respectivamente, "Dark Paladin" e "Sorcerer of Dark Magic". Além disso, "Sorcerer of Dark Magic" pode remover o risco do efeito de "Eternal Soul", que é ativado quando ela é destruída.</p>
 
-					<p>If "Berry Magician Girl" is attacked, you can Special Summon "Choco Magician Girl" from your Main Deck. Both of these "Magician Girl" cards can Summon or search for "Dark Magician Girl". They can also act as a Spellcaster-Type Tribute, which is often needed for the theme's Spell and Trap Cards.</p>
+					<p>Se "Berry Magician Girl" for atacada, você pode Especial-Invocar "Choco Magician Girl" do seu Deck Principal. Esses dois cards "Magician Girl" podem Invocar ou pesquisar por "Dark Magician Girl". Eles também podem servir como um tributo tipo Mago, frequentemente necessário para a ativação de Magias e Armadilhas do tema.</p>
 
-					<p>"Summoner Monk" can be used to Special Summon "Elemental HERO Prisma", then use its effect to combo with "The Eye of Timaeus" by changing its name to "Dark Magician". "Monk" used to start "Magician Girl" combos, and is an extra Xyz Material with "Choco Magician Girl" or "Legion the Fiend Jester". Either way "Monk" can be used to get to "The Eye of Timaeus" or "Sorceror of Dark Magic" faster if they are in the hand, but does not search them directly.</p>
+					<p>"Summoner Monk" pode ser usado para Especial-Invocar "Elemental HERO Prisma", e então usar seu efeito em conjunto com "The Eye of Timaeus", trocando seu nome para "Dark Magician". "Monk" usado para iniciar combos com "Magician Girl", é usado junto com "Choco Magician Girl" ou "Legion the Fiend Jester" como Material Xyz. De qualquer forma "Monk" pode ser usado para trazer "The Eye of Timaeus" ou "Sorceror of Dark Magic" para a mão mais rápido, mas não pesquisa eles diretamente.</p>
+
+					<p><a href="http://yugioh.wikia.com/wiki/Dark_Magician_(archetype)">Fonte: YuGiOh Wikia</p>
 
 				</div>
 
 				<div class="ArchetypeInfo">
 					<div class="ArchetypeIMG">
-						<img src="../img/img.png" title="Arte da Carta Domain of The Truth Monarchs">
+						<img src="../img/dm.png" title="Arte da Carta Bond Between Teather and Student">
 					</div>
 
 					<div class="ArchetypeLang">
