--- a/strategies/monarch.html
+++ b/strategies/monarch.html
@@ -51,11 +51,13 @@
 
 					<h1>Estilo de Jogo</h1>
 					<p>Decks de "Monarch" tendem a ser muito agressivos e poderosos, porque "Monarchs" destroem as estratégias do oponente, e possuem ATK o bastante para serem capazes de destruir quase qualquer monstro de nível menor que o oponente usar como resposta. "Monarchs" não têm uma real fraqueza, exceto Decks que rodam estritamente "Zombie World", que quase completamente desliga os "Monarchs", e sua necessidade insaciável de gerar materiais de Tributo para que mais "Monarchs" sejam Invocados, e eles não podem ativar seus efeitos ao serem Special-Invocados (com exceção de "Kuraz" e "Delg".)<p><br>
+
+					<p><a href="http://yugioh.wikia.com/wiki/Monarch">Fonte: YuGiOh Wikia</p>
 				</div>
 
 				<div class="ArchetypeInfo">
 					<div class="ArchetypeIMG">
-						<img src="../img/img.png" title="Arte da Carta Domain of The Truth Monarchs">
+						<img src="../img/monarch.png" title="Arte da Carta Domain of The Truth Monarchs">
 					</div>
 
 					<div class="ArchetypeLang">
