Posição da imagem de capa e algumas coisas no rodapé

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 				<li><a href="banlist.html">Banlist</a></li>
 			</ul>
 		</div>
+
+		<div class="TopImg">
+			<img src="capa.jpg" height="300" width="500">
+
+			</div>
 			
 		<div class="Sidebar">
 			<div class="ListaMeta">
@@ -105,6 +110,16 @@
 		</div>
 		
 		<div class="Footer">
+		<div class="Team">
+			<h1> Desenvolvido por: </h1>
+		<p><a href="IFPIhttps://www.facebook.com/adriano.olr?fref=ts"> Adriano  Rocha</a></p>
+		<p><a href="https://www.facebook.com/CynthyaGunner">Cínhia Bezerra </a></p>
+		<p> 4º ano, informática - 
+		</div>
+			<div class="logo">
+				
+			</div>
+		
 
 		</div>
 	</body>
