--- a/post1.html
+++ b/post1.html
@@ -3,7 +3,7 @@
 	<header>
 		<meta charset="utf-8">
 		<title>Rank Up Strategy</title>
-		<link rel="stylesheet" type="text/css" href="css/style-post.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</header>
 	
 	<body>
@@ -36,10 +36,10 @@
 		</div>
 
 		<div class="Content">
-			<div class="Artigo">	
-				<div class="mainimg">
-					<img scr="img/img.png" width="740" height="200">
+
 					<div class="matter">
+						<div class="mainimg">
+					<img scr="img/img.png" width="740" height="200">
 						<h1> Yu-Gi-Oh! 20 Anos - Os Jogadores </h1>
 						<p>
 							A saudosa TV Globinho<br>
@@ -70,7 +70,7 @@
 						</p>
 				 	</div>
 				</div>
-			</div>
-		</div>
+			
+
 	</body>
 </html>
