--- a/estrategias.html
+++ b/estrategias.html
@@ -39,15 +39,22 @@
 			<div class="deckSelect">
 				<h1>Arquétipos</h1>
 				<div class="deck">
-					<a href="strategies/monarch.html"><img src="img/img.png">
+					<a href="strategies/monarch.html"><img src="img/monarch.png">
 					Monarch</a>
 				</div>
 
 				<div class="deck">
-					<a href="strategies/dark_magician.html"><img src="img/img.png">
+					<a href="strategies/dark_magician.html"><img src="img/apdarkmagician.png">
 					Dark Magician</a>
 				</div>
 			</div>
+		</div>
+
+		<div class="Footer">
+			<h1> Desenvolvido por: </h1>
+			<p><a href="IFPIhttps://www.facebook.com/adriano.olr?fref=ts"> Adriano  Rocha</a></p>
+			<p><a href="https://www.facebook.com/CynthyaGunner">Cínhia Bezerra </a></p>
+			<p> 4º ano, informática </p>
 		</div>
 	</body>
 </html>
