--- a/strategies/monarch.html
+++ b/strategies/monarch.html
@@ -82,7 +82,10 @@
 		</div>
 		
 		<div class="Footer">
-			
+			<h1> Desenvolvido por: </h1>
+			<p><a href="IFPIhttps://www.facebook.com/adriano.olr?fref=ts"> Adriano  Rocha</a></p>
+			<p><a href="https://www.facebook.com/CynthyaGunner">Cínhia Bezerra </a></p>
+			<p> 4º ano, informática </p>
 		</div>
 	</body>
 </html>
