algumas coisas simples

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<li>Infernoid</li>
 					<li>Super Quantums</li>
 				</ol>
-					<h3>Fonte: <a href="http://yugiohtopdecks.com/?filter=Last+3+Months">YuGiOh Top Decks</a></h3>
+					<h3>Fonte: <a target="blank" href="http://yugiohtopdecks.com/?filter=Last+3+Months">YuGiOh Top Decks</a></h3>
 			</div>
 		</div>
 
